--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -6,6 +6,6 @@ post_max_size=32M
 
 [XDebug]
 zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20160303/xdebug.so
-xdebug.remote_enable=1
-xdebug.remote_host="127.0.0.1"
+xdebug.remote_enable=on
+xdebug.remote_autostart=off
 xdebug.remote_port=9000
