- added eclipse php tool integration, papyrus preferences - save log files in log folder

--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -1,6 +1,8 @@
 [PHP]
-display_errors=On
-html_errors=Off
+display_errors=on
+log_errors=on
+error_log=/var/log/apache2/php_err.log
+html_errors=off
 upload_max_filesize=32M
 post_max_size=32M
 
