--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,22 +4,25 @@ services:
   webserver:
     build: 
       context: ./docker/webserver
-    environment:
-      XDEBUG_CONFIG: remote_host=${HOST_IP}
-    ports:
-      - "80:80"
     volumes:
       - ../www:/var/www/html
+      - ../log:/var/log/apache2
+    ports:
+      - "80:80"
+    restart: always
+    environment:
+      XDEBUG_CONFIG: remote_host=${HOST_IP}
 
   mysql:
     image: mysql:5.7
-    ports: 
-      - "3306:3306"
     volumes:
       - ./db:/var/lib/mysql
+    ports: 
+      - "3306:3306"
+    restart: always
     environment:
-      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
-      - MYSQL_ROOT_PASSWORD=
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+      MYSQL_ROOT_PASSWORD: 
 
 volumes:
   mysql:
