--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -1,13 +1,14 @@
 [PHP]
-display_errors=on
-log_errors=on
+display_errors=On
+log_errors=On
 error_log=/var/log/apache2/php_err.log
-html_errors=off
+html_errors=Off
 upload_max_filesize=32M
 post_max_size=32M
 
 [XDebug]
 zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20160303/xdebug.so
-xdebug.remote_enable=on
-xdebug.remote_autostart=off
+xdebug.remote_enable=1
+xdebug.remote_autostart=0
 xdebug.remote_port=9000
+xdebug.remote_cookie_expire_time=-9999
