--- a/docker/.env
+++ b/docker/.env
@@ -1,2 +1,11 @@
 # IP address of the host
 HOST_IP=192.168.0.1
+
+# Storage path for MySQL
+DB_PATH=./db
+
+# Document root of the HTTP server
+WWW_PATH=../www
+
+# Log path of the HTTP server
+LOG_PATH=../log
