--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     build: 
       context: ./docker/webserver
     volumes:
-      - ../www:/var/www/html
-      - ../log:/var/log/apache2
+      - ${WWW_PATH}:/var/www/html
+      - ${LOG_PATH}:/var/log/apache2
     ports:
       - "80:80"
     restart: always
@@ -16,7 +16,7 @@ services:
   mysql:
     image: mysql:5.7
     volumes:
-      - ./db:/var/lib/mysql
+      - ${DB_PATH}:/var/lib/mysql
     ports: 
       - "3306:3306"
     restart: always
