--- a/docker/.env
+++ b/docker/.env
@@ -1,11 +1,15 @@
-# IP address of the host
-HOST_IP=192.168.0.1
+# Docker host
+docker_host_ip=192.168.0.1
 
-# Storage path for MySQL
-DB_PATH=./db
+# MySQL server
+db_port=3306
+db_datadir=./db
 
-# Document root of the HTTP server
-WWW_PATH=../www
+# HTTP server
+http_port=80
+http_docroot=J:\Daten\web\www
+http_logdir=../log
 
-# Log path of the HTTP server
-LOG_PATH=../log
+# PHP
+php_xdebug_enabled=1
+php_xdebug_port=9000
