--- a/docker/docker/webserver/Dockerfile
+++ b/docker/docker/webserver/Dockerfile
@@ -1,4 +1,5 @@
 FROM php:7.1-apache
+ARG XDEBUG_ENABLED=0
 
 RUN apt-get update -y && apt-get install -y \
     libfreetype6-dev \
@@ -13,10 +14,13 @@ RUN docker-php-ext-configure \
         pdo_mysql \
         mysqli
 
-RUN pecl install xdebug-2.5.4 \
-    && docker-php-ext-enable xdebug
+RUN if [ "$XDEBUG_ENABLED" = "1" ]; then pecl install xdebug-2.5.4 \
+    && docker-php-ext-enable xdebug \
+    ; fi
 
+RUN if [ "$XDEBUG_ENABLED" = "1" ]; then export XDEBUG_INI=config/xdebug.ini; else export XDEBUG_INI=; fi 
 COPY config/php.ini /usr/local/etc/php/
+COPY $XDEBUG_INI /usr/local/etc/php/
 
 RUN a2enmod rewrite
 RUN service apache2 restart
