fixed xdebug config

--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -5,3 +5,8 @@ error_log=/var/log/apache2/php_err.log
 html_errors=Off
 upload_max_filesize=32M
 post_max_size=32M
+
+[XDebug]
+xdebug.remote_enable=1
+xdebug.remote_autostart=0
+xdebug.remote_cookie_expire_time=-9999
