added more php modules + configuration

--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -5,6 +5,8 @@ error_log=/var/log/apache2/php_err.log
 html_errors=Off
 upload_max_filesize=32M
 post_max_size=32M
+memory_limit=1024M
+date.timezone=Europe/Berlin
 
 [XDebug]
 xdebug.remote_enable=1
