--- a/docker/docker/webserver/Dockerfile
+++ b/docker/docker/webserver/Dockerfile
@@ -4,7 +4,8 @@ ARG XDEBUG_ENABLED=0
 RUN apt-get update -y && apt-get install -y \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
-    libpng12-dev
+    libpng12-dev \
+    libicu-dev
 
 RUN docker-php-ext-configure \
     gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
@@ -12,7 +13,10 @@ RUN docker-php-ext-configure \
         gd \
         pdo \
         pdo_mysql \
-        mysqli
+        mysqli \
+        intl \
+        exif \
+        opcache
 
 RUN if [ "$XDEBUG_ENABLED" = "1" ]; then pecl install xdebug-2.5.4 \
     && docker-php-ext-enable xdebug \
