configure mysql root pw

--- a/docker/.env
+++ b/docker/.env
@@ -2,8 +2,9 @@
 docker_host_ip=192.168.0.1
 
 # MySQL server
-db_port=3306
-db_datadir=./db
+mysql_port=3306
+mysql_root_pw=
+mysql_datadir=./db
 
 # HTTP server
 http_port=80
