--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,13 +18,13 @@ services:
   mysql:
     image: mysql:5.7
     volumes:
-      - ${db_datadir}:/var/lib/mysql
+      - ${mysql_datadir}:/var/lib/mysql
     ports: 
-      - "${db_port}:3306"
+      - "${mysql_port}:3306"
     restart: always
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-      MYSQL_ROOT_PASSWORD: 
+      MYSQL_ROOT_PASSWORD: ${mysql_root_pw}
 
 volumes:
   mysql:
