more php config

--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -6,6 +6,7 @@ html_errors=Off
 upload_max_filesize=32M
 post_max_size=32M
 memory_limit=1024M
+max_execution_time=300
 date.timezone=Europe/Berlin
 
 [XDebug]
