--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,5 @@
 # Docker host
-docker_host_ip=192.168.0.1
+docker_host_ip=192.168.4.100
 
 # MySQL server
 mysql_port=3306
@@ -8,7 +8,7 @@ mysql_datadir=./db
 
 # HTTP server
 http_port=80
-http_docroot=../www
+http_docroot=J:\Daten\web\www
 http_logdir=../log
 
 # PHP
