Added more xdebug settings

--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -13,3 +13,8 @@ date.timezone=Europe/Berlin
 xdebug.remote_enable=1
 xdebug.remote_autostart=0
 xdebug.remote_cookie_expire_time=-9999
+xdebug.profiler_enable_trigger=1
+xdebug.profiler_output_dir=/var/log/apache2
+xdebug.trace_enable_trigger=1
+xdebug.trace_output_dir=/var/log/apache2
+xdebug.show_mem_delta=1
