--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -3,11 +3,21 @@ display_errors=On
 log_errors=On
 error_log=/var/log/apache2/php_err.log
 html_errors=Off
-upload_max_filesize=32M
-post_max_size=32M
+upload_max_filesize=64M
+post_max_size=64M
 memory_limit=1024M
 max_execution_time=300
 date.timezone=Europe/Berlin
+
+[opcache]
+opcache.enable=1
+opcache.revalidate_freq=0
+opcache.validate_timestamps=1
+opcache.max_accelerated_files=10000
+opcache.memory_consumption=192
+opcache.max_wasted_percentage=10
+opcache.interned_strings_buffer=16
+opcache.fast_shutdown=1
 
 [XDebug]
 xdebug.remote_enable=1
