Migrated to XDebug 3

--- a/docker/.env
+++ b/docker/.env
@@ -10,5 +10,6 @@ http_logdir=../log
 
 # PHP
 php_xdebug_enabled=1
-php_xdebug_port=9000
 php_meminfo_enabled=0
+php_xdebug_mode=debug
+php_xdebug_port=9000
