--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,6 @@
 # MySQL server
 mysql_port=3306
-mysql_root_pw=
+mysql_root_pw=changeme
 mysql_datadir=./db
 
 # HTTP server
@@ -13,3 +13,6 @@ php_xdebug_enabled=1
 php_meminfo_enabled=0
 php_xdebug_mode=debug
 php_xdebug_port=9000
+
+# Adminer
+adminer_port=8090
