--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ${http_logdir}:/var/log/apache2
     ports:
       - "${http_port}:80"
-    restart: always
+    restart: unless-stopped
     environment:
       XDEBUG_CONFIG: client_host=host.docker.internal client_port=${php_xdebug_port}
       XDEBUG_MODE: ${php_xdebug_mode}
@@ -24,10 +24,19 @@ services:
       - ${mysql_datadir}:/var/lib/mysql
     ports: 
       - "${mysql_port}:3306"
-    restart: always
+    restart: unless-stopped
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       MYSQL_ROOT_PASSWORD: ${mysql_root_pw}
+
+  adminer:
+    container_name: adminer
+    image: adminer
+    restart: unless-stopped
+    ports:
+      - "${adminer_port}:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: 'mysql'
 
 volumes:
   mysql:
