--- a/www/.devcontainer/devcontainer.json
+++ b/www/.devcontainer/devcontainer.json
@@ -14,6 +14,9 @@
     // use. Update this value and .devcontainer/docker-compose.yml to the real service name.
     "service": "webserver",
 
+    // Override the user that VS Code runs as in the container
+    "remoteUser": "www-data",
+
     // The optional 'workspaceFolder' property is the path VS Code should open by default when
     // connected. This is typically a file mount in .devcontainer/docker-compose.yml
     "workspaceFolder": "/var/www/html",
@@ -23,7 +26,9 @@
     // It needs to be installed in the container for us to have access to it.
     "extensions": [
         "felixfbecker.php-debug",
-        "bmewburn.vscode-intelephense-client"
+        "bmewburn.vscode-intelephense-client",
+        "johnstoncode.svn-scm",
+        "donjayamanne.git-extension-pack"
     ],
 
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
