Separate db volumes

--- a/docker/.env
+++ b/docker/.env
@@ -4,7 +4,7 @@ uid=1000
 # MySQL server
 mysql_port=3306
 mysql_root_pw=changeme
-mysql_datadir=./db
+mysql_datadir=./db-mysql5.7
 
 # HTTP server
 http_port=80
