Add composer project name and network (same as php8 container), change ports to allow for parallel execution with php8

--- a/docker/.env
+++ b/docker/.env
@@ -1,20 +1,22 @@
+COMPOSE_PROJECT_NAME=php7
+
 # User
 uid=1000
 
 # MySQL server
-mysql_port=3306
+mysql_port=3307
 mysql_root_pw=changeme
 mysql_datadir=./db-mysql5.7
 
 # HTTP server
-http_port=80
+http_port=8081
 http_docroot=../www
 
 # PHP
 php_xdebug_enabled=1
 php_meminfo_enabled=0
 php_xdebug_mode=debug
-php_xdebug_port=9003
+php_xdebug_port=9004
 
 # Adminer
-adminer_port=8090
+adminer_port=8091
