--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.3'
 
 services:
-  webserver:
-    build: 
+  webserver_php7:
+    build:
       context: ./docker/webserver
       args:
         XDEBUG_ENABLED: ${php_xdebug_enabled}
@@ -16,20 +16,22 @@ services:
     environment:
       XDEBUG_CONFIG: client_host=host.docker.internal client_port=${php_xdebug_port}
       XDEBUG_MODE: ${php_xdebug_mode}
+    networks:
+      - php8_default
 
-  mysql:
+  mysql_57:
     image: mysql:5.7
     volumes:
       - ./docker/mysql/conf:/etc/mysql/conf.d
       - ${mysql_datadir}:/var/lib/mysql
-    ports: 
+    ports:
       - "${mysql_port}:3306"
     restart: unless-stopped
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
       MYSQL_ROOT_PASSWORD: ${mysql_root_pw}
 
-  adminer:
+  adminer_57:
     image: adminer
     restart: unless-stopped
     ports:
@@ -39,4 +41,7 @@ services:
 
 volumes:
   mysql:
-  
+
+networks:
+  php8_default:
+    external: true
