--- a/www/.devcontainer/devcontainer.json
+++ b/www/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
 
     // The 'service' property is the name of the service for the container that VS Code should
     // use. Update this value and .devcontainer/docker-compose.yml to the real service name.
-    "service": "webserver",
+    "service": "webserver_php7",
 
     // Override the user that VS Code runs as in the container
     "remoteUser": "app-user",
