--- a/docker/.env
+++ b/docker/.env
@@ -9,6 +9,7 @@ mysql_root_pw=changeme
 mysql_datadir=./db-mysql8.0
 
 # HTTP server
+# use 8080 when running in nginx-proxy
 http_port=80
 http_docroot=../www
 
