--- a/docker/docker/webserver/Dockerfile
+++ b/docker/docker/webserver/Dockerfile
@@ -28,6 +28,9 @@ RUN apt-get update -y && apt-get install -y \
     libavif-dev \
     libicu-dev \
     libzip-dev \
+    libssl-dev \
+    libc-client-dev \
+    libkrb5-dev \
     zip \
     subversion \
     git \
@@ -35,8 +38,8 @@ RUN apt-get update -y && apt-get install -y \
     nodejs \
     npm
 
-RUN docker-php-ext-configure \
-    gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/ --with-avif=/usr/include/ \
+RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ --with-webp=/usr/include/ --with-avif=/usr/include/ \
+    && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
     && docker-php-ext-install -j$(nproc) \
         gd \
         pdo \
@@ -45,6 +48,7 @@ RUN docker-php-ext-configure \
         intl \
         exif \
         zip \
+        imap \
         opcache
 
 RUN if [ "$XDEBUG_ENABLED" = "1" ]; then pecl install xdebug \
