--- a/docker/docker/webserver/Dockerfile
+++ b/docker/docker/webserver/Dockerfile
@@ -77,6 +77,7 @@ COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 COPY config/vhosts.conf /etc/apache2/sites-available/vhosts.conf
 
 RUN a2enmod rewrite
+RUN a2enmod headers
 RUN a2ensite vhosts.conf
 
 # Run as non-root user
