--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -30,12 +30,18 @@ services:
       MYSQL_ROOT_PASSWORD: ${mysql_root_pw}
 
   adminer:
-    image: ghcr.io/shyim/adminerevo:latest
+    image: adminneoorg/adminneo:devel
     restart: unless-stopped
     ports:
       - "${adminer_port}:8080"
     environment:
-      ADMINER_DEFAULT_SERVER: 'mysql'
+      NEO_COLOR_VARIANT: green
+      NEO_NAVIGATION_MODE: reversed
+      NEO_PREFER_SELECTION: true
+      NEO_JSON_VALUES_DETECTION: true
+      NEO_JSON_VALUES_AUTO_FORMAT: true
+      NEO_DEFAULT_DRIVER: mysql
+      NEO_DEFAULT_SERVER: mysql
 
 volumes:
   mysql:
