Map xdebug logs to host, update launch.json

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,7 @@ services:
         USER_UID: ${uid}
     volumes:
       - ${http_docroot}:/var/www/html
+      - ./xdebug:/tmp/xdebug
     ports:
       - "${http_port}:80"
     restart: unless-stopped
