--- a/docker/docker/webserver/config/php.ini
+++ b/docker/docker/webserver/config/php.ini
@@ -15,4 +15,5 @@ opcache.optimization_level=0x7FFEBFFF
 
 [XDebug]
 xdebug.start_with_request=trigger
-xdebug.output_dir=/var/log/apache2
+xdebug.output_dir=/tmp/xdebug
+xdebug.profiler_output_name=cachegrind.out.%p
