Add ssl support

--- a/docker/.env
+++ b/docker/.env
@@ -11,6 +11,7 @@ mysql_datadir=./db-mysql8.0
 # HTTP server
 # use 8080 when running in nginx-proxy
 http_port=80
+https_port=443
 http_docroot=../www
 
 # PHP
