--- a/docker/docker/webserver/config/vhosts.conf
+++ b/docker/docker/webserver/config/vhosts.conf
@@ -2,6 +2,11 @@
 #    ServerName local.example.com
 #    ServerAlias local.example.de
 #    DocumentRoot /var/www/html/example
+#
+#    SSLEngine on
+#    SSLCertificateFile /var/www/html/example/cert/cert.pem
+#    SSLCertificateKeyFile /var/www/html/example/cert/key.pem
+#
 #    ErrorLog ${APACHE_LOG_DIR}/error.log
 #    CustomLog ${APACHE_LOG_DIR}/access.log combined
 #    <Directory /var/www/html/example>
